--- a/Clinica_Base_Datos_Final/.classpath
+++ b/Clinica_Base_Datos_Final/.classpath
@@ -4,7 +4,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="C:/commons-logging-1.2.jar"/>
 	<classpathentry kind="lib" path="C:/fontbox-2.0.19.jar"/>
-	<classpathentry kind="lib" path="C:/iReport-5.6.0-plugin.zip"/>
 	<classpathentry kind="lib" path="C:/jcalendar-1.4.jar"/>
 	<classpathentry kind="lib" path="C:/mssql-jdbc-12.6.3.jre8.jar"/>
 	<classpathentry kind="lib" path="C:/mssql-jdbc-12.6.3.jre8-javadoc.jar"/>
@@ -14,5 +13,11 @@
 	<classpathentry kind="lib" path="C:/mssql-jdbc-12.6.3.jre11-sources.jar"/>
 	<classpathentry kind="lib" path="C:/pdfbox-2.0.19.jar"/>
 	<classpathentry kind="lib" path="C:/pdfbox-tools-2.0.19.jar"/>
+	<classpathentry kind="lib" path="C:/jcalendar-1.4.zip"/>
+	<classpathentry kind="lib" path="C:/jdatepicker-1.3.4.jar"/>
+	<classpathentry kind="lib" path="C:/jgoodies-common-1.2.0.jar"/>
+	<classpathentry kind="lib" path="C:/jgoodies-looks-2.4.1.jar"/>
+	<classpathentry kind="lib" path="C:/junit-4.6.jar"/>
+	<classpathentry kind="lib" path="C:/mssql-jdbc-12.6.3.jre8-javadoc (1).jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
