--- a/Clinica_Base_Datos_Final/.classpath
+++ b/Clinica_Base_Datos_Final/.classpath
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="C:/commons-logging-1.2.jar"/>
 	<classpathentry kind="lib" path="C:/fontbox-2.0.19.jar"/>
 	<classpathentry kind="lib" path="C:/jcalendar-1.4.jar"/>
@@ -13,5 +12,7 @@
 	<classpathentry kind="lib" path="C:/mssql-jdbc-12.6.3.jre11-sources.jar"/>
 	<classpathentry kind="lib" path="C:/pdfbox-2.0.19.jar"/>
 	<classpathentry kind="lib" path="C:/pdfbox-tools-2.0.19.jar"/>
+	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="C:/jbcrypt-0.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
