--- a/Clinica_Base_Datos_Final/.classpath
+++ b/Clinica_Base_Datos_Final/.classpath
@@ -14,5 +14,16 @@
 	<classpathentry kind="lib" path="C:/pdfbox-tools-2.0.19.jar"/>
 	<classpathentry kind="lib" path="C:/jbcrypt-0.4.jar"/>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="C:/DE REPORTES/hamcrest-core-1.3.jar"/>
+	<classpathentry kind="lib" path="C:/DE REPORTES/jcommon-1.0.23.jar"/>
+	<classpathentry kind="lib" path="C:/DE REPORTES/jfreechart-1.0.19.jar"/>
+	<classpathentry kind="lib" path="C:/DE REPORTES/jfreechart-1.0.19-experimental.jar"/>
+	<classpathentry kind="lib" path="C:/DE REPORTES/jfreechart-1.0.19-swt.jar"/>
+	<classpathentry kind="lib" path="C:/DE REPORTES/jfreesvg-2.0.jar"/>
+	<classpathentry kind="lib" path="C:/DE REPORTES/junit-4.11.jar"/>
+	<classpathentry kind="lib" path="C:/DE REPORTES/orsoncharts-1.4-eval-nofx.jar"/>
+	<classpathentry kind="lib" path="C:/DE REPORTES/orsonpdf-1.6-eval.jar"/>
+	<classpathentry kind="lib" path="C:/DE REPORTES/servlet.jar"/>
+	<classpathentry kind="lib" path="C:/DE REPORTES/swtgraphics2d.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
